--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<section>
 		<div class="bgvideo">
-			<video src="source/files/videobg.mp4" type="video/mp4" autoplay muted loop></video>
+			<video src="source/files/video (1080p).mp4" type="video/mp4" autoplay muted loop></video>
 			<div class="effect"></div>
 			<div class="video-text">
 				<h1>Future`s here</h1>
