--- a/buy.html
+++ b/buy.html
@@ -1,16 +1,104 @@
-<!DOCTYPE html>
+<!DOCTYPE  html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home</title>
-	<link rel="stylesheet" href="static/styles/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" href="source/styles/mycss.css">
+	<link rel="stylesheet" href="source/styles/bgvideo.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="source/files/favicon_io/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="source/files/favicon_io/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="source/files/favicon_io/favicon-16x16.png">
+	<link rel="manifest" href="source/files/favicon_io/site.webmanifest">
+	<title>Buy</title>
 </head>
 
 <body>
-	GPay...
+	<header>
+		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+		  <div class="container-fluid">
+		    <a class="navbar-brand" href="/"><img src="source/files/logo.png"></a>
+		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="collapse navbar-collapse" id="navbarNav">
+		      <ul class="navbar-nav">
+		        <li class="nav-item">
+		          <a class="nav-link" aria-current="page" href="/">Home</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="page.html">Motivation1</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="page2.html">Motivation2</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link active" href="buy.html">Shopping</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="contact.html">Contacts</a>
+		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="price.html">Pricing</a>
+		        </li>
+		      </ul>
+		    </div>
+		  </div>
+		</nav>
+		
+	</header>
+
+	<section>
+		<div class="container-fluid mt-4">
+			<div class="row">
+				<div class="col-lg-1">
+
+				</div>
+				<div class="col-lg-8 col-md-12">
+					<div class="row">
+						      	
+					</div>	
+				</div>
+						    
+
+			</div>
+		</div>
+
+			
+
+	</section>
+
+	<footer class="mt-4">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-4 col-md-12 footer-text text-center">
+					<p>All Rights Reserved 2023</p>
+				</div>
+				<div class="col-lg-4 col-md-12 footer-text text-center">
+					<p>Contacts<br>Job<br>Our Team</p>
+				</div>
+				<div class="col-lg-4 col-md-12 media-links">
+					<a href="https://www.youtube.com/">
+						<img style="width: 40px; margin-inline: 1em;" src="source/images/youtube.png" alt="youtube">
+					</a>
+					<a href="https://www.facebook.com/">
+						<img style="width: 40px; margin-inline: 1em;" src="source/images/facebook.png" alt="facebook">
+					</a> 
+					<a href="https://www.instagram.com/">
+						<img style="width: 40px; margin-inline: 1em;" src="source/images/instagram.png" alt="instagram">
+					</a>
+					<a href="contact.html">
+						<img style="width: 40px; margin-inline: 1em;" src="source/images/WhatsApp.png" alt="whatsapp">
+					</a> 
+				</div>
+			</div>
+		</div>	
+	</footer>	
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
-</html>
-	
+</html>	
+
+ 
