--- a/page2.html
+++ b/page2.html
@@ -97,7 +97,7 @@
 						</p>
 
 						<p>
-							<a href="index.html">Сумніви? Почни знову</a>
+							<a href="/">Сумніви? Почни знову</a>
 						</p>
 					</div>
 		</div>
