--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 	<header>
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="index.html"><img src="source/files/logo.png"></a>
+		    <a class="navbar-brand" href="/"><img src="source/files/logo.png"></a>
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		      <ul class="navbar-nav">
 		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+		          <a class="nav-link active" aria-current="page" href="/">Home</a>
 		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="page.html">Motivation1</a>
